2005-08-13 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* scripts/Makefile.am: Depend our manually derived targets from
	$(top_srcdir)/stamp-h1 so they will get reevaluated after
	re-running configure.
	* doc/api/Makefile.am: (Ditto)
	* doc/api/doxygen.config.in: Upgrade for doxygen 1.4.1.
	* README: Upgrade required version of tools (GCC, doxygen)
	* configure.ac: (Ditto.)

2005-08-13 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Re-enable building of docs.
	* doc/api/Makefile.am: manually derive doxygen.config from
	doxygen.config.in as this is no longer automagic; do no longer
	try to build the demos as port of the documentation.

2005-08-11 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Merge the "autoconf" branch back to HEAD, so we can use
	current versions of autoconf and automake.

	Thanks to Ted Roth and Anatoly Sokolov for their nice work
	on that branch.

	All copyright notices from the branch files have been brought
	into the standard form.

	Changes compared to the "autoconf" branch:
	* configure.ac (AC_INIT): bump version to 1.3.0.20050810
	* configure.ac (AC_CONFIG_SRCDIR): use doc/examples/demo/demo.c
	as reference file
	* configure.ac: use $host_alias and $build_alias instead of the
	deprecated $host and $build, hint about using config.guess for
	--build, add checks and conditional rules for attiny13,
	attiny2313, atmega48, atmega88, atmega165, atmega168, atmega325,
	atmega3250, atmega645, atmega6450, at90can128; remove warning
	about being work in progress.
	* AvrCommonLibC.am (libc_a_LIBADD libc_a_DEPENDENCIES): add
	misc_a_libadd (for the EEPROM libraries)
	* include/compat/.cvsignore: New file
	* scripts/.cvsignore: (Ditto.)
	* include/compat/Makefile.am: (Ditto.)
	* scripts/Makefile.am: (Ditto.)
	* Makefile.am (EXTRA_DIST): add ChangeLog-2004
	* Makefile.am (SUBDIRS DIST_SUBDIRS): add "scripts"
	* doc/Makefile.am (EXTRA_DIST): remove avr-libc-reference.html
	* doc/api/Makefile.am (install-data-local): add INSTALL_DOX_MAN